--- a/mysql/my.ini
+++ b/mysql/my.ini
@@ -28,19 +28,19 @@
 # The following options will be passed to all MySQL clients
 [client]
 #password	= your_password
-port		= 3333
+port		= 3307
 socket		= /tmp/mysql.sock
 
 # Here follows entries for some specific programs
 
 # The MySQL server
 [mysqld]
-port		= 3333
+port		= 3307
 
 
-innodb_data_home_dir = C:/Users/evand/Downloads/usbwebserver-legalite completo login\mysql\data\
+innodb_data_home_dir = C:/Users/evand/Downloads/Controle_de_estoque\mysql\data\
 innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = C:/Users/evand/Downloads/usbwebserver-legalite completo login\mysql\data\
+innodb_log_group_home_dir = C:/Users/evand/Downloads/Controle_de_estoque\mysql\data\
 
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
